<resources>
    <string name="app_name">Palette Paintbox</string>
    <string name="title_activity_palette_creator_and_editor">PaletteCreatorAndEditor</string>
    <string name="title_activity_palette_single_viewer">PaletteSingleViewer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="color_data_display_format">Color Data Display Format</string>
    <string name="show">Show</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="hex_code">Hex Code (#rrggbb)</string>
    <string name="rgb">RGB (rrr, ggg, bbb)</string>
    <string name="none">None</string>
    <string name="credits">Credits</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="delete_x">X</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="view_all">VIEW ALL</string>
    <string name="palette_editor">Palette Editor</string>
    <string name="palette_name">Palette Name</string>
</resources>
