<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/settingsLayout"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settingstoolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        app:title="Settings"
        android:background="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/themeH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/themeChoice"
        android:layout_width="265dp"
        android:layout_height="66dp" >

        <RadioButton
            android:id="@+id/lightTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/darkTh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark" />
    </RadioGroup>

    <TextView
        android:id="@+id/colorDataH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_data_display_format"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/dataChoice"
        android:layout_width="280dp"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/showData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enableColorCodeSettings"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/show" />

        <CheckBox
            android:id="@+id/showHexcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/hex_code" />

        <CheckBox
            android:id="@+id/showRGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rgb" />

        <RadioButton
            android:id="@+id/noData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="disableColorCodeSettings"
            android:layout_weight="1"
            android:text="@string/none" />
    </RadioGroup>

    <TextView
        android:id="@+id/creditsH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewCredits"
        android:text="@string/credits"
        android:textSize="24sp" />

    <Button
        android:id="@+id/applySettings"
        android:onClick="applySettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply" />
</LinearLayout>